# israel-rent-data-collector

./: .agent-plan.md  .gitignore  .pre-commit-ci.yaml  .pre-commit-config.yaml  AGENTS.md  README.md  llms.txt  pyproject.toml
.github/: pr-agent-context-template.md
.github/workflows/: ci.yml  pr-agent-context-refresh.yml
configs/pipelines/: public_release.yaml
configs/sources/: data_gov_il_locality_registry.yaml
data/: locality_codes_seed.csv
data/output/: locality_crosswalk.csv  rent_benchmarks.csv
docs/: 00_project_overview.md  01_system_architecture.md  02_output_datasets_schema.md  03_implementation_plan.md  CODEX_HANDOFF.md  CODEX_HANDOFF_UPDATE.md  Israel_Housing_Data_Engineering_Advice_by_Gemini.md  israel_official_housing_data_sources.md  output_model.md  provenance.md  running.md  source_policy.md  sources.md
scripts/: collect.py
src/rent_collector/: __init__.py  cli.py  config.py  models.py  pipeline.py  provenance.py  public_bundle.py  source_registry.py
src/rent_collector/collectors/: base.py  boi_hedonic.py  cbs_api.py  cbs_table49.py  data_gov_il.py  nadlan.py
src/rent_collector/utils/: http_client.py  locality_crosswalk.py
tests/: helpers.py
tests/integration/: test_pipeline_run.py  test_public_bundle_flow.py
tests/unit/: test_boi_hedonic.py  test_cbs_api.py  test_cbs_table49.py  test_cli.py  test_http_client.py  test_locality_crosswalk_and_datagov.py  test_models_and_base.py  test_nadlan.py  test_pipeline.py  test_public_bundle.py  test_source_registry.py
