[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rent-collector"
version = "0.1.0"
description = "Collect official Israeli rental-price benchmarks from government and public sources"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # HTTP
    "requests>=2.31",
    "httpx>=0.27",
    # Retry logic
    "tenacity>=8.3",
    # Data handling
    "pandas>=2.2",
    "openpyxl>=3.1",         # Excel read/write
    # PDF parsing (CBS Table 4.9)
    "pdfplumber>=0.11",
    # HTML parsing (nadlan fallback)
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    # Data models & validation
    "pydantic>=2.7",
    # CLI & progress
    "rich>=13.7",
    "click>=8.1",
    # Env config
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-httpx>=0.30",
    "black",
    "ruff",
    "mypy",
]

[project.scripts]
rent-collect = "rent_collector.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
